The up-down arrow icon error corrected in the  cookies button. Terms and conditions section created, to improve the text align according to text quantity.

--- a/frontend/src/components/css_files/7_2_legal_texts.css
+++ b/frontend/src/components/css_files/7_2_legal_texts.css
@@ -1,6 +1,6 @@
 
 
-.gdpr-wrap, .cookie-wrap {
+.gdpr-wrap, .cookie-wrap, .terms-wrap {
     grid-area: gdpr;
     padding: 0 var(--text-padding);
     text-align: center;
@@ -16,6 +16,10 @@
 
 .short-text {
     text-align: center;
+}
+
+.long-text {
+    text-align: justify;
 }
 
 ol, ul, li, .gdpr-wrap .long-text {
@@ -38,7 +42,7 @@ li p {
 }
 
 @media screen and (min-width: 1080px) {
-    .gdpr-wrap {
+    .gdpr-wrap, .cookie-wrap, .terms-wrap {
         padding: calc(5*var(--text-padding)); 
     }
 }
